--- a/end-to-end/search-interface/public/app.css
+++ b/end-to-end/search-interface/public/app.css
@@ -16,6 +16,10 @@
   padding-left: 0;
 }
 
+#search_results .cloudsearch_result_meta_line {
+  padding-left: 0;
+}
+
 #search_results .cloudsearch_result_count_container {
   padding-left: 0;
 }
@@ -29,6 +33,7 @@
 }
 
 #app {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
 }
@@ -38,9 +43,9 @@
 }
 
 #facet_results {
-  flex: 0 1 20%;
+  flex: 0 0 auto;
 }
 
 #search_results {
-  flex: 0 1 80%;
+  flex: 1 1 50%;
 }
