--- a/serving/widget/public/with_css/app.css
+++ b/serving/widget/public/with_css/app.css
@@ -16,6 +16,22 @@
   padding-left: 0;
 }
 
+#search_results .cloudsearch_result_context_line {
+  padding-left: 0;
+}
+
+#search_results .cloudsearch_result_meta_line {
+  padding-left: 0;
+}
+
+#facet_results .cloudsearch_facet_result_operator_name {
+  font-weight: bold;
+}
+
+#facet_results .cloudsearch_facet_bucket_value {
+  margin-left: 8px;
+}
+
 #search_bar {
   flex: 0 0 100%;
 }
